--- a/problem1/app/go/Dockerfile
+++ b/problem1/app/go/Dockerfile
@@ -2,5 +2,6 @@ FROM golang:1.17.6
 
 WORKDIR /app
 EXPOSE 1323
+RUN go install github.com/cosmtrek/air@latest
 
-CMD ["go", "run", "main.go"]
+CMD ["air"]
