--- a/problem1/app/.air.norml.conf
+++ b/problem1/app/.air.norml.conf
@@ -2,8 +2,8 @@ root = "."
 tmp_dir = "build"
 
 [build]
-cmd = "go build -o build/main ."
-bin = "build/main"
+cmd = "go build -o build/minimal_sns ."
+bin = "build/minimal_sns"
 include_ext = ["go", "tpl", "tmpl", "html"]
 exclude_dir = ["assets", "tmp", "vendor", ".git"]
 
