--- a/problem1/app/.air.toml
+++ b/problem1/app/.air.toml
@@ -2,10 +2,10 @@ root = "."
 tmp_dir = "build"
 
 [build]
-cmd = "go build -gcflags \"all=-N -l\" -o build/main ."
-bin = "build/main"
+cmd = "go build -gcflags \"all=-N -l\" -o build/minimal_sns ."
+bin = "build/minimal_sns"
 
-full_bin = "dlv --listen=:2345 --headless=true --api-version=2 --accept-multiclient exec ./build/main"
+full_bin = "dlv --listen=:2345 --headless=true --api-version=2 --accept-multiclient exec ./build/minimal_sns"
 include_ext = ["go", "tpl", "tmpl", "html"]
 exclude_dir = ["assets", "tmp", "vendor", ".git"]
 
