--- a/problem1/docker-compose.yml
+++ b/problem1/docker-compose.yml
@@ -26,8 +26,8 @@ services:
       - "2345:2345"
       - "1323:1323"
     volumes:
-      - ./:/minimal_sns
-    working_dir: /minimal_sns/app/
+      - ./app/:/app
+    working_dir: /app/
     networks:
       - front
       - back
