--- a/problem1/Makefile
+++ b/problem1/Makefile
@@ -19,7 +19,7 @@ app:
 	docker-compose exec app bash
 
 test:
-	docker-compose exec app go test ./...
+	docker-compose exec app go test -v ./...
 
 
 del:
